# ggwave.rs

./: Cargo.toml  README.md
benches/: bandwidth.rs
examples/: gen_samples.rs  optimize_vowels.rs  sweep_duration.rs
src/: decoder.rs  dss.rs  encoder.rs  fft.rs  formant.rs  lib.rs  protocol.rs  reed_solomon.rs  rs3.rs  stream.rs
tests/: cross_compat.rs  phy.rs  robustness.rs  stream.rs
